--- a/src/styles/00_header.scss
+++ b/src/styles/00_header.scss
@@ -107,6 +107,21 @@ DESKTOP HEADER ------------------
       @include flex;
       @include justify-content(center);
       column-gap: get-rem-desktop(48);
+
+      a {
+        will-change: opacity;
+        @include transition(opacity 300ms cubic-bezier(0.25,0.1,0.25,1));
+      }
+
+      @media (hover: hover) {
+        &:hover a {
+          opacity: 0.5;
+        }
+
+        a:hover {
+          opacity: 1;
+        }
+      }
     }
 
     .right {
@@ -123,8 +138,10 @@ DESKTOP HEADER ------------------
       will-change: background-color, border-color;
       @include transition-multiple(background-color 500ms cubic-bezier(0.25,0.1,0.25,1),border-color 500ms cubic-bezier(0.25,0.1,0.25,1));
 
-      &:hover {
-        background-color: $colour-orange-hover;
+      @media (hover: hover) {
+        &:hover {
+          background-color: $colour-orange-hover;
+        }
       }
     }
   }
@@ -268,8 +285,10 @@ TABLET HEADER ------------------
       will-change: background-color, border-color;
       @include transition-multiple(background-color 500ms cubic-bezier(0.25,0.1,0.25,1),border-color 500ms cubic-bezier(0.25,0.1,0.25,1));
 
-      &:hover {
-        background-color: $colour-orange-hover;
+      @media (hover: hover) {
+        &:hover {
+          background-color: $colour-orange-hover;
+        }
       }
     }
   }
@@ -330,6 +349,21 @@ TABLET HEADER ------------------
       @include flex;
       @include justify-content(center);
       column-gap: get-rem-desktop(32);
+
+      a {
+        will-change: opacity;
+        @include transition(opacity 300ms cubic-bezier(0.25,0.1,0.25,1));
+      }
+
+      @media (hover: hover) {
+        &:hover a {
+          opacity: 0.5;
+        }
+
+        a:hover {
+          opacity: 1;
+        }
+      }
     }
   }
 }
@@ -601,6 +635,21 @@ MOBILE HEADER ------------------
     @include justify-content(center);
     @include align-items(center);
     row-gap: get-rem-mobile(12);
+
+    a {
+      will-change: opacity;
+      @include transition(opacity 300ms cubic-bezier(0.25,0.1,0.25,1));
+    }
+
+    @media (hover: hover) {
+      &:hover a {
+        opacity: 0.5;
+      }
+
+      a:hover {
+        opacity: 1;
+      }
+    }
   }
 
   .icon-wrapper {
